feat: run DAG functional including frontend
